--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,28 @@
   -moz-osx-font-smoothing: grayscale;
 }
 
+.main {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  height: 100%;
+}
+
+.buttons {
+  display: flex;
+  flex-direction: row;
+  gap: 1em;
+  margin: 2em 0;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  /*put items to the left*/
+  align-items: flex-start;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -53,6 +75,9 @@ button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
+
+
+
 
 @media (prefers-color-scheme: light) {
   :root {
