--- a/src/index.css
+++ b/src/index.css
@@ -2,7 +2,6 @@
   font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
   line-height: 1.5;
   font-weight: 400;
-
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -20,6 +19,8 @@
   align-items: center;
   justify-content: center;
   height: 100%;
+  /* text size */
+  font-size: 1.2em;
 }
 
 
@@ -56,9 +57,19 @@ body {
 }
 
 h1 {
-  font-size: 2em;
+  font-size: 2.2em;
   line-height: 1.1;
 }
+
+p {
+  font-size: 1.1em;
+}
+
+input,
+select {
+  font-size: 1em;
+}
+
 
 button {
   border-radius: 8px;
